examples/SmallPython/files/bad/b4.py
def foo():
    a
        b
    b
